# GetHoney

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gethoney.code-workspace  pyproject.toml
.github/workflows/: ci.yaml
agent/: .flake8  .gitignore  TODO  agent.py  file1  file2  find_ips.py  main.py  models.py  process_data.py  pyproject.toml  scan_all_files.py  scan_file.py
agent/.github/: ci.yaml
agent/gethoney_agent/: config.py  main.py  models.py  process_data.py  scan_all_files.py
agent/gethoney_agent/parsers/: agent.py  crowlie_parser.py  template.py
agent/test-files/: example-doc  file3  ips  testlog2
gethoney/: crud.py  get_logs.py  main.py  models.py
gethoney/core/: api.py  models.py
gethoney/data/nginx/: configure.conf
honeypost_dev/: example.txt  honey.py  main.py  random.txt
server/: .gitignore  pyproject.toml
server/gethoney/: db.py  main.py  models.py
server/gethoney_server/: config.py  crud.py  main.py
server/tests/: test_main.py
tests/: test_gethoney.py  test_honeypost_dev.py  test_main.py
ui/: .gitignore  package-lock.json  package.json  pyproject.toml
ui/frontend/src/: App.js
