[tool.poetry]
name = "gethoney"
version = "0.1.0"
description = ""
authors = ["Nick Seldner <nickseldner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
requests = "^2.27.1"
mypy = "^0.950"
python-dotenv = "^0.20.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
