[tool.poetry]
name = "gethoney_agent"
version = "0.1.0"
description = "agent for gethoney"
authors = ["Nick Seldner <nickseldner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
mypy = "^0.982"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pydantic = "^1.10.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
